Add multiple collections, mpnet embeds, and upsert
