# models/api.py
@@ -3,12 +3,17 @@ from models.models import (
     DocumentMetadataFilter,
     Query,
     QueryResult,
+    ActiveCollection,
 )
 from pydantic import BaseModel
 from typing import List, Optional
 
 
+class UpsertFileRequest(BaseModel):
+    collection_name: str
+
 class UpsertRequest(BaseModel):
+    collection_name: str
     documents: List[Document]
 
 
@@ -17,6 +22,7 @@ class UpsertResponse(BaseModel):
 
 
 class QueryRequest(BaseModel):
+    collection_name: str
     queries: List[Query]
 
 
@@ -25,6 +31,7 @@ class QueryResponse(BaseModel):
 
 
 class DeleteRequest(BaseModel):
+    collection_name: Optional[str] = None
     ids: Optional[List[str]] = None
     filter: Optional[DocumentMetadataFilter] = None
     delete_all: Optional[bool] = False
@@ -32,3 +39,18 @@ class DeleteRequest(BaseModel):
 
 class DeleteResponse(BaseModel):
     success: bool
+
+
+class CreateCollectionRequest(BaseModel):
+    collection_name: str
+    embedding_method: str = "mpnet"
+    overview: Optional[str] = None
+    description: Optional[str] = None
+
+
+class CreateCollectionResponse(BaseModel):
+    success: bool
+
+
+class GetActiveCollectionsResponse(BaseModel):
+    collections: List[ActiveCollection]
